Two columns of posts and fix covered scroll up button

--- a/src/NavFooter.css
+++ b/src/NavFooter.css
@@ -7,6 +7,10 @@
     overflow:hidden;
 }
 
+#nav-bar-priority {
+    z-index: 0;
+}
+
 .item {
     float:left;
     width:20%;
